@@ -9,6 +9,7 @@ mac getIpByName liefert name von IPnum
 opsi-script (4.12.4.23) stable; urgency=low
 
  * osfuncwin2: fix for function resolveWinSymlink
+ * new constant %opsiserviceClientId% (FQDN in service context, empty without)
 
 -- d.oertel <d.oertel@uib.de> Tue, 08 June 2021 15:00
 
